--- a/Gyroscope/Test/Makefile
+++ b/Gyroscope/Test/Makefile
@@ -35,12 +35,16 @@ BUILD_DIR = build
 # source
 ######################################
 # C sources
-C_SOURCES =  \
-Src/main.c \
-Src/gpio.c \
-Src/usart.c \
-Src/stm32f4xx_it.c \
+C_SOURCES =\
+Lib/Gyroscope/gyroscope.c \
+\
 Src/stm32f4xx_hal_msp.c \
+ Src/gpio.c \
+ Src/main.c \
+ Src/stm32f4xx_it.c \
+ Src/system_stm32f4xx.c \
+ Src/usart.c \
+\
 Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c \
 Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c \
 Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c \
@@ -57,7 +61,6 @@ Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr_ex.c \
 Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.c \
 Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.c \
 Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_exti.c \
-Src/system_stm32f4xx.c  
 
 # ASM sources
 ASM_SOURCES =  \
@@ -116,6 +119,10 @@ AS_INCLUDES =
 
 # C includes
 C_INCLUDES =  \
+  -ILib/Gyroscope \
+ \
+  -ILib/Gyroscope \
+ \
 -IInc \
 -IDrivers/STM32F4xx_HAL_Driver/Inc \
 -IDrivers/STM32F4xx_HAL_Driver/Inc/Legacy \
